Add sitronix st1633i pcap touch
- Original sitronix st1633i pcap touch
- modified driver to read out device data from FDT
- add x_rev, y_rev and xy_swap to driver which you can change via the
FDT

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -628,6 +628,14 @@ config TOUCHSCREEN_ESMT
 	  Then select one of the versions. You can also say M here. Then
 	  you can select either version or both to be built as a module.
 
+config TOUCHSCREEN_ST1633I
+	tristate "Sitronix st1633i i2c touchscreen (from URT UMSH-8596MD display)"
+	depends on I2C
+	help
+	  To use a Sitronix st1633i touchscreen, say Y.
+	  Then select one of the versions. You can also say M here. Then
+	  you can select either version or both to be built as a module.
+
 config TOUCHSCREEN_MIGOR
 	tristate "Renesas MIGO-R touchscreen"
 	depends on SH_MIGOR && I2C
