Improve armstonea9r2 DT audio sgtl5000 clock
Improve the clock chain of the sgtl 5000 codec. Until now the clock for
the sgtl5000 (cko1) and the clock of the mipi camera have the same clock
frequence because the output frequence were on cko1 and cko2. So if you
change the sgtl5000 clock you automatically change the mipi clock too
because they depend on each other. Now you can change the clock of the
sgtl5000 independent from the mipi clock.

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -425,18 +425,16 @@
 
 &clks {
 	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
-			  <&clks IMX6QDL_CLK_SSI1_SEL>,
-			  <&clks IMX6QDL_CLK_SSI1>,
-			  <&clks IMX6QDL_CLK_CKO2_SEL>,
+			  <&clks IMX6QDL_CLK_CKO1_SEL>,
+			  <&clks IMX6QDL_CLK_CKO1_PODF>,
 			  <&clks IMX6QDL_CLK_CKO>;
 
 	assigned-clock-parents = <0>,
 				 <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 				 <0>,
-				 <&clks IMX6QDL_CLK_SSI1>,
-				 <&clks IMX6QDL_CLK_CKO2>;
-//###	assigned-clock-rates = <786432000>, <0>, <24576000>;
-	assigned-clock-rates = <786432000>, <0>, <12288000>;
+				 <&clks IMX6QDL_CLK_CKO1>;
+
+	assigned-clock-rates = <98304000>, <98304000>, <12288000>;
 };
 
 #ifdef CONFIG_ARMSTONEA9R2_SPI_FLASH
