--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -122,6 +122,7 @@ CONFIG_USB_NET_CDC_EEM=m
 # CONFIG_RTL_CARDS is not set
 CONFIG_WL_TI=y
 CONFIG_WL12XX=m
+CONFIG_WL18XX=m
 CONFIG_WLCORE=y
 CONFIG_WLCORE_SDIO=y
 CONFIG_MWIFIEX=m
