Improve wm9715 support
We dont need 2 ssi clocks because on i.MX6 the IPG clock and the BAUD
clock are on the same wire. So we need only one of them.

--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -357,9 +357,8 @@
 							"fsl,imx51-ssi";
 					reg = <0x02028000 0x4000>;
 					interrupts = <0 46 IRQ_TYPE_LEVEL_HIGH>;
-					clocks = <&clks IMX6QDL_CLK_SSI1_IPG>,
-						 <&clks IMX6QDL_CLK_SSI1>;
-					clock-names = "ipg", "baud";
+					clocks = <&clks IMX6QDL_CLK_SSI1>;
+					clock-names = "baud";
 					dmas = <&sdma 37 22 0>,
 					       <&sdma 38 22 0>;
 					dma-names = "rx", "tx";
