--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -158,6 +158,7 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_WM97XX=y
 CONFIG_TOUCHSCREEN_SX8654=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
@@ -239,6 +240,7 @@ CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
+CONFIG_SND_SOC_FSL_FUS_WM9715=y
 CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_USB=y
