Improve NetDCUA9 device tree (support axx88796b)
- Support ax88796b
- Support pxp

--- a/arch/arm/boot/dts/netdcua9dl.dts
+++ b/arch/arm/boot/dts/netdcua9dl.dts
@@ -188,10 +188,6 @@ wvga {					\
 //#define CONFIG_NETDCUA9_UART_B_RS485
 #define CONFIG_NETDCUA9_UART_C
 
-//### todo
-/* ETHERNET 2 */
-//#define CONFIG_NETDCUA9_ETHERNET_2
-
 #include "imx6dl.dtsi"
 #include "netdcua9qdl.dtsi"
 
@@ -206,5 +202,5 @@ wvga {					\
 
 /* i.MX6 Solo and DualLite have a PXP engine */
 &pxp {
-	//status = "okay";
+	status = "okay";
 };
