Add support for PicoCOM1.2
Add device tree picocom1.2.dts. This supports:

- UART (6x external, 1x internal)
- Audio (SGTL5000, MQS prepared but not tested)
- Status LEDs
- Ethernet
- WLAN
- 2x CAN
- 4x PWM
- 3x ADC
- USB (1x Host, 1x Device)
- SD/MMC (1x external SD-Card, 1x internal WLAN)
- I2C (2x external, 1x internal)
- 2x SPI
- NAND

Replace dummy clocks for PWM2 and PWM3 with specific POWM clocks in
imx6ul.dtsi.

Add picocom1.2.dtb to dts Makefile.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -382,6 +382,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-14x14-evk-usb-certi.dtb \
 	imx6ul-14x14-lpddr2-arm2.dtb \
 	efusa7ul.dtb \
+	picocom1.2.dtb \
 	cubea7ul.dtb \
 	imx6ul-9x9-evk.dtb \
 	imx6ul-9x9-evk-btwifi.dtb \
