--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -838,13 +838,14 @@
 		led@1 {
 			reg = <1>;
 			label = "1-LEDCTRL";
-			default-on;
 			type = "PWM";
+			default-on;
 		};
 		led@2 {
 			reg = <2>;
 			label = "2-ROTATE";
 			type = "GPIO";
+			active-high;
 		};
 		led@3 {
 			reg = <3>;
