--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -519,13 +519,14 @@ lvds_wvga {				\
 		led@1 {
 			reg = <1>;
 			label = "1-LEDCTRL";
-			default-on;
 			type = "PWM";
+			default-on;
 		};
 		led@2 {
 			reg = <2>;
 			label = "2-ROTATE";
 			type = "GPIO";
+			active-high;
 		};
 		led@3 {
 			reg = <3>;
