Add support for GAR1
Makefile:
        - add device tree gar1 to be build by fsimx6_defconfig
Device tree settings:
        - GPMI for NAND flash with F&S NAND driver and F&S APBH DMA
          driver
        - Ethernet: 100MBit/s via RMII
        - Ethernet 2: 100MBit/s via RMII
        - Serial ports on UART1 (port A), UART2 (port B)
        - USB Device and USB Host
        - I2C1 (port A) on connector J7
        - I2C2 (port B) rtc (pca8565)
        - 4 Status LEDS on PWM1, PWM2, PWM3, PWM4

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -384,6 +384,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	efusa7ul.dtb \
 	picocom1.2.dtb \
 	cubea7ul.dtb \
+	gar1.dtb \
 	imx6ul-9x9-evk.dtb \
 	imx6ul-9x9-evk-btwifi.dtb \
 	imx6ul-9x9-evk-csi.dtb \
